--- a/css/_globals.scss
+++ b/css/_globals.scss
@@ -4,6 +4,7 @@
 
   Licensed under GPL and MIT.
 */
+
 /*
   Forces backgrounds to span full width,
   even if there is horizontal scrolling.
@@ -11,18 +12,23 @@
 
   Note: IE6 works fine without this fix.
 */
+
 body {
-  min-width: 960px; }
+  min-width: 960px;
+}
 
 /* `Container
 ----------------------------------------------------------------------------------------------------*/
+
 .container_12 {
   margin-left: auto;
   margin-right: auto;
-  width: 960px; }
+  width: 960px;
+}
 
 /* `Grid >> Global
 ----------------------------------------------------------------------------------------------------*/
+
 .grid_1,
 .grid_2,
 .grid_3,
@@ -38,7 +44,8 @@ body {
   display: inline;
   float: left;
   margin-left: 10px;
-  margin-right: 10px; }
+  margin-right: 10px;
+}
 
 .push_1, .pull_1,
 .push_2, .pull_2,
@@ -51,179 +58,239 @@ body {
 .push_9, .pull_9,
 .push_10, .pull_10,
 .push_11, .pull_11 {
-  position: relative; }
+  position: relative;
+}
 
 /* `Grid >> Children (Alpha ~ First, Omega ~ Last)
 ----------------------------------------------------------------------------------------------------*/
+
 .alpha {
-  margin-left: 0; }
+  margin-left: 0;
+}
 
 .omega {
-  margin-right: 0; }
+  margin-right: 0;
+}
 
 /* `Grid >> 12 Columns
 ----------------------------------------------------------------------------------------------------*/
+
 .container_12 .grid_3 {
-  width: 220px; }
+  width: 220px;
+}
 
 .container_12 .grid_6 {
-  width: 460px; }
+  width: 460px;
+}
 
 .container_12 .grid_12 {
-  width: 940px; }
+  width: 940px;
+}
 
 /* `Prefix Extra Space >> 12 Columns
 ----------------------------------------------------------------------------------------------------*/
+
 .container_12 .prefix_1 {
-  padding-left: 80px; }
+  padding-left: 80px;
+}
 
 .container_12 .prefix_2 {
-  padding-left: 160px; }
+  padding-left: 160px;
+}
 
 .container_12 .prefix_3 {
-  padding-left: 240px; }
+  padding-left: 240px;
+}
 
 .container_12 .prefix_4 {
-  padding-left: 320px; }
+  padding-left: 320px;
+}
 
 .container_12 .prefix_5 {
-  padding-left: 400px; }
+  padding-left: 400px;
+}
 
 .container_12 .prefix_6 {
-  padding-left: 480px; }
+  padding-left: 480px;
+}
 
 .container_12 .prefix_7 {
-  padding-left: 560px; }
+  padding-left: 560px;
+}
 
 .container_12 .prefix_8 {
-  padding-left: 640px; }
+  padding-left: 640px;
+}
 
 .container_12 .prefix_9 {
-  padding-left: 720px; }
+  padding-left: 720px;
+}
 
 .container_12 .prefix_10 {
-  padding-left: 800px; }
+  padding-left: 800px;
+}
 
 .container_12 .prefix_11 {
-  padding-left: 880px; }
+  padding-left: 880px;
+}
 
 /* `Suffix Extra Space >> 12 Columns
 ----------------------------------------------------------------------------------------------------*/
+
 .container_12 .suffix_1 {
-  padding-right: 80px; }
+  padding-right: 80px;
+}
 
 .container_12 .suffix_2 {
-  padding-right: 160px; }
+  padding-right: 160px;
+}
 
 .container_12 .suffix_3 {
-  padding-right: 240px; }
+  padding-right: 240px;
+}
 
 .container_12 .suffix_4 {
-  padding-right: 320px; }
+  padding-right: 320px;
+}
 
 .container_12 .suffix_5 {
-  padding-right: 400px; }
+  padding-right: 400px;
+}
 
 .container_12 .suffix_6 {
-  padding-right: 480px; }
+  padding-right: 480px;
+}
 
 .container_12 .suffix_7 {
-  padding-right: 560px; }
+  padding-right: 560px;
+}
 
 .container_12 .suffix_8 {
-  padding-right: 640px; }
+  padding-right: 640px;
+}
 
 .container_12 .suffix_9 {
-  padding-right: 720px; }
+  padding-right: 720px;
+}
 
 .container_12 .suffix_10 {
-  padding-right: 800px; }
+  padding-right: 800px;
+}
 
 .container_12 .suffix_11 {
-  padding-right: 880px; }
+  padding-right: 880px;
+}
 
 /* `Push Space >> 12 Columns
 ----------------------------------------------------------------------------------------------------*/
+
 .container_12 .push_1 {
-  left: 80px; }
+  left: 80px;
+}
 
 .container_12 .push_2 {
-  left: 160px; }
+  left: 160px;
+}
 
 .container_12 .push_3 {
-  left: 240px; }
+  left: 240px;
+}
 
 .container_12 .push_4 {
-  left: 320px; }
+  left: 320px;
+}
 
 .container_12 .push_5 {
-  left: 400px; }
+  left: 400px;
+}
 
 .container_12 .push_6 {
-  left: 480px; }
+  left: 480px;
+}
 
 .container_12 .push_7 {
-  left: 560px; }
+  left: 560px;
+}
 
 .container_12 .push_8 {
-  left: 640px; }
+  left: 640px;
+}
 
 .container_12 .push_9 {
-  left: 720px; }
+  left: 720px;
+}
 
 .container_12 .push_10 {
-  left: 800px; }
+  left: 800px;
+}
 
 .container_12 .push_11 {
-  left: 880px; }
+  left: 880px;
+}
 
 /* `Pull Space >> 12 Columns
 ----------------------------------------------------------------------------------------------------*/
+
 .container_12 .pull_1 {
-  left: -80px; }
+  left: -80px;
+}
 
 .container_12 .pull_2 {
-  left: -160px; }
+  left: -160px;
+}
 
 .container_12 .pull_3 {
-  left: -240px; }
+  left: -240px;
+}
 
 .container_12 .pull_4 {
-  left: -320px; }
+  left: -320px;
+}
 
 .container_12 .pull_5 {
-  left: -400px; }
+  left: -400px;
+}
 
 .container_12 .pull_6 {
-  left: -480px; }
+  left: -480px;
+}
 
 .container_12 .pull_7 {
-  left: -560px; }
+  left: -560px;
+}
 
 .container_12 .pull_8 {
-  left: -640px; }
+  left: -640px;
+}
 
 .container_12 .pull_9 {
-  left: -720px; }
+  left: -720px;
+}
 
 .container_12 .pull_10 {
-  left: -800px; }
+  left: -800px;
+}
 
 .container_12 .pull_11 {
-  left: -880px; }
+  left: -880px;
+}
 
 /* `Clear Floated Elements
 ----------------------------------------------------------------------------------------------------*/
+
 /* http://sonspring.com/journal/clearing-floats */
+
 .clear {
   clear: both;
   display: block;
   overflow: hidden;
   visibility: hidden;
   width: 0;
-  height: 0; }
+  height: 0;
+}
 
 /* http://www.yuiblog.com/blog/2010/09/27/clearfix-reloaded-overflowhidden-demystified */
+
 .clearfix:before,
 .clearfix:after,
 .container_12:before,
@@ -235,101 +302,20 @@ body {
   font-size: 0;
   line-height: 0;
   width: 0;
-  height: 0; }
+  height: 0;
+}
 
 .clearfix:after,
 .container_12:after {
-  clear: both; }
+  clear: both;
+}
 
 /*
   The following zoom:1 rule is specifically for IE6 + IE7.
   Move to separate stylesheet if invalid CSS is a problem.
 */
+
 .clearfix,
 .container_12 {
-  zoom: 1; }
-
-/* =========
-Body Styling
-* font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
-* bg.png file for background
-========= */
-body {
-  background: url("../img/bg.png");
-  color: #fff;
-  font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif; }
-
-/* =========
-Blockquote
-* color #e44d26
-* font size 2em
-* font style italic
-* letter spacing 1px
-* text aligned center
-========= */
-blockquote {
-  color: #e44d26;
-  font-size: 2em;
-  font-style: italic;
-  letter-spacing: 1px;
-  text-align: center; }
-
-/* =========
-Navigation
-* List Items - Navigation provided
-
-Anchor Links
-* padding: 10px 10px 10px 40px;
-* color on hover #E44D26
-========= */
-nav li {
-  float: left;
-  list-style: none;
-  margin: 0 10px 0 10px; }
-
-/* Base link styling */
-nav a:link,
-nav a:visited {
-  color: #fff;
-  padding: 10px 10px 10px 40px;
-  text-decoration: none;
-  text-transform: uppercase; }
-
-nav a:hover,
-nav a:active {
-  color: #E44D26; }
-
-/* on hover show home.png */
-#home a:hover {
-  background: url("../img/icons/home.png") no-repeat left center; }
-
-/* on hover show home.png */
-#super a:hover {
-  background: url("../img/icons/super.png") no-repeat left center; }
-
-/* on hover show home.png */
-#html5 a:hover {
-  background: url("../img/icons/html5.png") no-repeat left center; }
-
-/* =========
-Super Friends
-* font-family: 'Open Sans', sans-serif;
-* text-indent: 32px;
-* line-height: 24px;
-========= */
-h3 {
-  font-family: 'Open Sans', sans-serif; }
-
-article img {
-  border: 10px solid #fff; }
-
-img + p {
-  line-height: 24px;
-  text-indent: 32px; }
-
-/* =========
-Footer
-* arial font for paragraphs
-========= */
-footer p {
-  font: 10px/16px 'arial', sans-serif; }
+  zoom: 1;
+}
