Optimizing All Images

--- a/css/styles.css
+++ b/css/styles.css
@@ -250,7 +250,7 @@ body {
   zoom: 1; }
 
 body {
-  background: url("../img/bg.png");
+  background: url("../img/bg.jpg");
   color: #fff;
   font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif; }
 
