--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3,7 +3,7 @@
 
 
 body {
-	background: url("../img/bg.png");
+	background: url("../img/bg.jpg");
 	color: #fff;
 	font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
 }
