Trying to see if @import rule works better

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,6 +1,7 @@
 @import "_globals.scss";
 
 
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
 body {
 	background: url("../img/bg.jpg");
