--- a/css/styles.css
+++ b/css/styles.css
@@ -1,297 +1,1 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
-/*
-  960 Grid System ~ Core CSS.
-  Learn more ~ http://960.gs/
-
-  Licensed under GPL and MIT.
-*/
-/*
-  Forces backgrounds to span full width,
-  even if there is horizontal scrolling.
-  Increase this if your layout is wider.
-
-  Note: IE6 works fine without this fix.
-*/
-body {
-  min-width: 960px; }
-
-/* `Container
-----------------------------------------------------------------------------------------------------*/
-.container_12 {
-  margin-left: auto;
-  margin-right: auto;
-  width: 960px; }
-
-/* `Grid >> Global
-----------------------------------------------------------------------------------------------------*/
-.grid_1,
-.grid_2,
-.grid_3,
-.grid_4,
-.grid_5,
-.grid_6,
-.grid_7,
-.grid_8,
-.grid_9,
-.grid_10,
-.grid_11,
-.grid_12 {
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px; }
-
-.push_1, .pull_1,
-.push_2, .pull_2,
-.push_3, .pull_3,
-.push_4, .pull_4,
-.push_5, .pull_5,
-.push_6, .pull_6,
-.push_7, .pull_7,
-.push_8, .pull_8,
-.push_9, .pull_9,
-.push_10, .pull_10,
-.push_11, .pull_11 {
-  position: relative; }
-
-/* `Grid >> Children (Alpha ~ First, Omega ~ Last)
-----------------------------------------------------------------------------------------------------*/
-.alpha {
-  margin-left: 0; }
-
-.omega {
-  margin-right: 0; }
-
-/* `Grid >> 12 Columns
-----------------------------------------------------------------------------------------------------*/
-.container_12 .grid_3 {
-  width: 220px; }
-
-.container_12 .grid_6 {
-  width: 460px; }
-
-.container_12 .grid_12 {
-  width: 940px; }
-
-/* `Prefix Extra Space >> 12 Columns
-----------------------------------------------------------------------------------------------------*/
-.container_12 .prefix_1 {
-  padding-left: 80px; }
-
-.container_12 .prefix_2 {
-  padding-left: 160px; }
-
-.container_12 .prefix_3 {
-  padding-left: 240px; }
-
-.container_12 .prefix_4 {
-  padding-left: 320px; }
-
-.container_12 .prefix_5 {
-  padding-left: 400px; }
-
-.container_12 .prefix_6 {
-  padding-left: 480px; }
-
-.container_12 .prefix_7 {
-  padding-left: 560px; }
-
-.container_12 .prefix_8 {
-  padding-left: 640px; }
-
-.container_12 .prefix_9 {
-  padding-left: 720px; }
-
-.container_12 .prefix_10 {
-  padding-left: 800px; }
-
-.container_12 .prefix_11 {
-  padding-left: 880px; }
-
-/* `Suffix Extra Space >> 12 Columns
-----------------------------------------------------------------------------------------------------*/
-.container_12 .suffix_1 {
-  padding-right: 80px; }
-
-.container_12 .suffix_2 {
-  padding-right: 160px; }
-
-.container_12 .suffix_3 {
-  padding-right: 240px; }
-
-.container_12 .suffix_4 {
-  padding-right: 320px; }
-
-.container_12 .suffix_5 {
-  padding-right: 400px; }
-
-.container_12 .suffix_6 {
-  padding-right: 480px; }
-
-.container_12 .suffix_7 {
-  padding-right: 560px; }
-
-.container_12 .suffix_8 {
-  padding-right: 640px; }
-
-.container_12 .suffix_9 {
-  padding-right: 720px; }
-
-.container_12 .suffix_10 {
-  padding-right: 800px; }
-
-.container_12 .suffix_11 {
-  padding-right: 880px; }
-
-/* `Push Space >> 12 Columns
-----------------------------------------------------------------------------------------------------*/
-.container_12 .push_1 {
-  left: 80px; }
-
-.container_12 .push_2 {
-  left: 160px; }
-
-.container_12 .push_3 {
-  left: 240px; }
-
-.container_12 .push_4 {
-  left: 320px; }
-
-.container_12 .push_5 {
-  left: 400px; }
-
-.container_12 .push_6 {
-  left: 480px; }
-
-.container_12 .push_7 {
-  left: 560px; }
-
-.container_12 .push_8 {
-  left: 640px; }
-
-.container_12 .push_9 {
-  left: 720px; }
-
-.container_12 .push_10 {
-  left: 800px; }
-
-.container_12 .push_11 {
-  left: 880px; }
-
-/* `Pull Space >> 12 Columns
-----------------------------------------------------------------------------------------------------*/
-.container_12 .pull_1 {
-  left: -80px; }
-
-.container_12 .pull_2 {
-  left: -160px; }
-
-.container_12 .pull_3 {
-  left: -240px; }
-
-.container_12 .pull_4 {
-  left: -320px; }
-
-.container_12 .pull_5 {
-  left: -400px; }
-
-.container_12 .pull_6 {
-  left: -480px; }
-
-.container_12 .pull_7 {
-  left: -560px; }
-
-.container_12 .pull_8 {
-  left: -640px; }
-
-.container_12 .pull_9 {
-  left: -720px; }
-
-.container_12 .pull_10 {
-  left: -800px; }
-
-.container_12 .pull_11 {
-  left: -880px; }
-
-/* `Clear Floated Elements
-----------------------------------------------------------------------------------------------------*/
-/* http://sonspring.com/journal/clearing-floats */
-.clear {
-  clear: both;
-  display: block;
-  overflow: hidden;
-  visibility: hidden;
-  width: 0;
-  height: 0; }
-
-/* http://www.yuiblog.com/blog/2010/09/27/clearfix-reloaded-overflowhidden-demystified */
-.clearfix:before,
-.clearfix:after,
-.container_12:before,
-.container_12:after {
-  content: '.';
-  display: block;
-  overflow: hidden;
-  visibility: hidden;
-  font-size: 0;
-  line-height: 0;
-  width: 0;
-  height: 0; }
-
-.clearfix:after,
-.container_12:after {
-  clear: both; }
-
-/*
-  The following zoom:1 rule is specifically for IE6 + IE7.
-  Move to separate stylesheet if invalid CSS is a problem.
-*/
-.clearfix,
-.container_12 {
-  zoom: 1; }
-
-body {
-  background: url("../img/bg.jpg");
-  color: #fff;
-  font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif; }
-
-blockquote {
-  color: #e44d26;
-  font-size: 2em;
-  font-style: italic;
-  letter-spacing: 1px;
-  text-align: center; }
-
-nav li {
-  float: left;
-  list-style: none;
-  margin: 0 10px 0 10px; }
-nav a:link, nav a:visited {
-  color: #fff;
-  padding: 10px 10px 10px 40px;
-  text-decoration: none;
-  text-transform: uppercase; }
-nav a:hover, nav a:active {
-  color: #E44D26; }
-
-#home a:hover {
-  background: url("../img/icons/home.png") no-repeat left center; }
-
-#super a:hover {
-  background: url("../img/icons/super.png") no-repeat left center; }
-
-#html5 a:hover {
-  background: url("../img/icons/html5.png") no-repeat left center; }
-
-h3 {
-  font-family: 'Open Sans', sans-serif; }
-
-article img {
-  border: 10px solid #fff; }
-
-img + p {
-  line-height: 24px;
-  text-indent: 32px; }
-
-footer p {
-  font: 10px/16px 'arial', sans-serif; }
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);body{min-width:960px}.container_12{margin-left:auto;margin-right:auto;width:960px}.grid_1,.grid_10,.grid_11,.grid_12,.grid_2,.grid_3,.grid_4,.grid_5,.grid_6,.grid_7,.grid_8,.grid_9{display:inline;float:left;margin-left:10px;margin-right:10px}.pull_1,.pull_10,.pull_11,.pull_2,.pull_3,.pull_4,.pull_5,.pull_6,.pull_7,.pull_8,.pull_9,.push_1,.push_10,.push_11,.push_2,.push_3,.push_4,.push_5,.push_6,.push_7,.push_8,.push_9{position:relative}.alpha{margin-left:0}.omega{margin-right:0}.container_12 .grid_3{width:220px}.container_12 .grid_6{width:460px}.container_12 .grid_12{width:940px}.container_12 .prefix_1{padding-left:80px}.container_12 .prefix_2{padding-left:160px}.container_12 .prefix_3{padding-left:240px}.container_12 .prefix_4{padding-left:320px}.container_12 .prefix_5{padding-left:400px}.container_12 .prefix_6{padding-left:480px}.container_12 .prefix_7{padding-left:560px}.container_12 .prefix_8{padding-left:640px}.container_12 .prefix_9{padding-left:720px}.container_12 .prefix_10{padding-left:800px}.container_12 .prefix_11{padding-left:880px}.container_12 .suffix_1{padding-right:80px}.container_12 .suffix_2{padding-right:160px}.container_12 .suffix_3{padding-right:240px}.container_12 .suffix_4{padding-right:320px}.container_12 .suffix_5{padding-right:400px}.container_12 .suffix_6{padding-right:480px}.container_12 .suffix_7{padding-right:560px}.container_12 .suffix_8{padding-right:640px}.container_12 .suffix_9{padding-right:720px}.container_12 .suffix_10{padding-right:800px}.container_12 .suffix_11{padding-right:880px}.container_12 .push_1{left:80px}.container_12 .push_2{left:160px}.container_12 .push_3{left:240px}.container_12 .push_4{left:320px}.container_12 .push_5{left:400px}.container_12 .push_6{left:480px}.container_12 .push_7{left:560px}.container_12 .push_8{left:640px}.container_12 .push_9{left:720px}.container_12 .push_10{left:800px}.container_12 .push_11{left:880px}.container_12 .pull_1{left:-80px}.container_12 .pull_2{left:-160px}.container_12 .pull_3{left:-240px}.container_12 .pull_4{left:-320px}.container_12 .pull_5{left:-400px}.container_12 .pull_6{left:-480px}.container_12 .pull_7{left:-560px}.container_12 .pull_8{left:-640px}.container_12 .pull_9{left:-720px}.container_12 .pull_10{left:-800px}.container_12 .pull_11{left:-880px}.clear{clear:both;display:block;overflow:hidden;visibility:hidden;width:0;height:0}.clearfix:after,.clearfix:before,.container_12:after,.container_12:before{content:'.';display:block;overflow:hidden;visibility:hidden;font-size:0;line-height:0;width:0;height:0}.clearfix:after,.container_12:after{clear:both}.clearfix,.container_12{zoom:1}body{background:url(../img/bg.jpg);color:#fff;font-family:Palatino,"Palatino Linotype","Palatino LT STD","Book Antiqua",Georgia,serif}blockquote{color:#e44d26;font-size:2em;font-style:italic;letter-spacing:1px;text-align:center}nav li{float:left;list-style:none;margin:0 10px}nav a:link,nav a:visited{color:#fff;padding:10px 10px 10px 40px;text-decoration:none;text-transform:uppercase}nav a:active,nav a:hover{color:#E44D26}#home a:hover{background:url(../img/icons/home.png) no-repeat left center}#super a:hover{background:url(../img/icons/super.png) no-repeat left center}#html5 a:hover{background:url(../img/icons/html5.png) no-repeat left center}h3{font-family:'Open Sans',sans-serif}article img{border:10px solid #fff}img+p{line-height:24px;text-indent:32px}footer p{font:10px/16px arial,sans-serif}
